# Holocore-farmware

./: Blender.py  Core.py  Gui.py  main.py  pyproject.toml  test-learning.py  window.py
Metadata/: Metadata.py  Quilt_Metadata.json  profile.json
tracker/: head_tracker.py
tracker/OpenSeeFace/: tracker.py
