[project]
name = "holocore-farmware"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dataclasses>=0.8",
    "dearpygui>=2.3.1",
    "mediapipe>=0.10.35",
    "moderngl>=5.12.0",
    "moderngl-window[imgui,pywavefront,trimesh]>=3.1.1",
    "numpy>=2.4.6",
    "onnxruntime>=1.27.0",
    "opencv-python>=4.13.0.92",
    "pillow>=12.2.0",
    "pytest>=9.1.1",
    "raylib>=6.0.1.0",
]
